solution section and gap fixes

--- a/index.css
+++ b/index.css
@@ -189,5 +189,74 @@ border-radius:50px;
 .container{
   width:1500px;
   height:448px;
-  padding:20px 80px 0px 80px;
+  padding:20px 50px 0px 50px;
+  margin-bottom:100px;
+}
+.sec{
+  padding:50px;
+}
+
+.k{
+
+   width:600px;
+  height:500px;
+
+}
+.t{
+  color:#30B868;
+  font-style:medium;
+  font-size:12px;
+  font-weight:500;
+  gap:20px;
+}
+
+.y{
+  color:#001931;
+  
+}
+.b{
+  margin-bottom: 30px;
+}
+
+.p3{
+  color:#627382;
+  
+
+  font-size: 16px;
+font-weight: 400;
+}
+.i1{
+  margin-top:30px;
+}
+.icon
+{
+  display:flex;
+  gap:20px;
+  margin-bottom:8px;
+  font-style: Medium;
+font-size: 16px;
+font-weight: 500;
+
+  
+}
+
+.kk{
+  display:flex;
+  justify-content:center;
+  width:1500px;
+  height:300px;
+  gap:60px;
+padding-top:0;
+}
+.solution{
+ 
+  display: flex;
+  
+  flex-direction: column;
+  align-items:flex-start;
+  width:600px;
+  height:500px;
+  padding-top:100px;
+
+
 }
